--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "./run-browsersync-proxy.js"
   },
   "author": "Douglas W. Paul",
-  "license": "ISC",
+  "license": "WTFPL",
   "dependencies": {
     "react": "^15.3.2",
     "react-dnd": "^2.1.4",
