--- a/package.json
+++ b/package.json
@@ -5,31 +5,34 @@
   "main": "gulpfile.js",
   "scripts": {
     "clean": "rm -rf public/ && mkdir public",
-    "copy-static-resources": "cp -r app/ public/",
+    "copy-static-resources": "cp -r app/* public/",
     "prebuild": "npm run clean",
     "build": "webpack && npm run copy-static-resources",
-    "start": "./run-browsersync-proxy.js"
+    "postinstall": "npm run build",
+    "start": "node index.js",
+    "dev-server": "./run-browsersync-proxy.js"
   },
   "author": "Douglas W. Paul",
   "license": "WTFPL",
   "dependencies": {
-    "react": "^15.3.2",
-    "react-dnd": "^2.1.4",
-    "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.3.2"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "express": "^4.14.0",
+    "react": "^15.3.2",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
+    "react-dom": "^15.3.2",
+    "webpack": "^1.13.2",
+    "webpack-config": "^6.2.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.16.0",
     "browser-sync": "^2.17.5",
     "bs-fullscreen-message": "^1.1.0",
     "strip-ansi": "^3.0.1",
-    "webpack": "^1.13.2",
-    "webpack-config": "^6.2.0",
     "webpack-dev-middleware": "^1.8.4"
   }
 }
