--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "express": "^4.14.0",
     "react": "^15.3.2",
     "react-dnd": "^2.1.4",
-    "react-dnd-html5-backend": "^2.1.2",
+    "react-dnd-touch-backend": "^0.3.3",
     "react-dom": "^15.3.2",
     "webpack": "^1.13.2",
     "webpack-config": "^6.2.0"
